	reduce the memory usage (to address a test case provided by Ben
	Williams)
	* src/column.h, src/part.h, src/query.h: change selectBytes to
	return signed char instead of char because on some system char can
	be default to be unsigned
	* src/colValeus.h: add double-quote around the strings when they
	are printed in ASCII form (a suggestion from Anderson Chaves)

2010-10-29 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: change the type of qlist, alist and slist
	from ibis::table::stringList to std::vector<const char*> to avoid
	triggering the initialization of the file manager object before
	the configuration parameters are read into memory (a problem
	reported by Ben Williams)
	* java/*/FastBitStringReader.java,
	java/*/FastbitStringWriter.java: remove the references to commons
	logging objects to reduce dependencies

2010-10-28 John Wu <John dot Wu at ACM dot org>
	* src: remove the prefix ibis from most of the print statements
	* tests/Makefile.am: in two places smallmem2.rc was incorrectly
	writtent as smallmem3.rc
	* src: update many files to address the warning message produced
	by PGI compilers

2010-10-25 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/part.cpp: add keyword virtual to the definition
	of ibis::part::buildIndexes to allow other packages to override it
	more easily

2010-10-21 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: in function util::userName add macro HAVE_GETPWUID
	to control the access to getpwuid (on certain parallel computers,
	getpwuid is supported differently on the compute nodes and the
	login nodes, using it can cause the program to crash), comment out
	the use of getlogin because it requires a login shell
	* configure.ac: add a statement with AC_RUN_IFELSE to test for the
	presence and usability of getpwuid

2010-10-20 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp: update the conditional macro surrounding strtoll
	* configure.ac: add test for strtoll, remove tests for unnecessary
	header