@@ -1,1 +1,1 @@
-1, nan, 1
+1, 0, 1
